<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.martiproduction.drinkownia.UI.Start">

    <com.martiproduction.drinkownia.CustomViews.CustomBubblesAnimation
        app:colorBackground="@color/colorDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginButton"
            android:src="@drawable/glass"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/notRegistredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textSize="@dimen/login_view_font_size"
            android:textColor="@color/colorText"
            android:layout_above="@+id/registerButton"
            android:layout_marginBottom="@dimen/login_view_padding_2"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_register_height"
            android:background="@color/colorButtonLogin"
            android:text="@string/register"
            android:textSize="@dimen/login_button_register_font_size"
            android:layout_marginBottom="21dp"
            android:layout_above="@+id/facebookLoginButton"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/facebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_register_height"
            android:background="@color/colorButtonLogin"
            android:text="@string/facebook_login"
            android:textSize="@dimen/login_button_facebook_size"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_login_height"
            android:background="@color/colorButtonLogin"
            android:text="@string/login"
            android:textSize="@dimen/login_view_login_font_size"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="@dimen/login_view_padding"
            android:layout_above="@+id/notRegistredText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</RelativeLayout>