<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/login_view_padding_2"
    android:paddingLeft="@dimen/login_view_padding_2"
    android:paddingRight="@dimen/login_view_padding_2"
    android:paddingTop="@dimen/login_view_padding_3"
    tools:context="com.martiproduction.drinkownia.UI.Login"
    android:background="@color/colorBackground">

    <Button
        android:text="@string/login_login"
        android:background="@color/colorButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_login_height"
        android:id="@+id/Login_LoginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <com.martiproduction.drinkownia.CustomViews.CustomEditText
        android:id="@+id/Login_LoginField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:hint="@string/login_hint"
        android:gravity="center_vertical|center_horizontal|center"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <com.martiproduction.drinkownia.CustomViews.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/password_hint"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="@dimen/login_view_padding"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Login_PasswordField"
        android:maxLines="1"
        android:imeOptions="actionGo"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/HelloTextLayout"
        android:alpha="0.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_view_padding_2"
        android:paddingRight="@dimen/login_view_padding_2"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/Login_TextGlassSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glass_small"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/Login_TextGlassSmall"
            android:layout_toEndOf="@+id/Login_TextGlassSmall"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_text"
                android:textSize="@dimen/login_hello_text"
                android:textColor="@color/colorText"
                android:id="@+id/Login_HelloText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_text_2"
                android:textSize="@dimen/login_hello_text_2"
                android:textColor="@color/colorText"
                android:id="@+id/Login_HelloText2" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
